--- a/static/css/index.css
+++ b/static/css/index.css
@@ -27,6 +27,11 @@ body {
   font-family: 'Google Sans', sans-serif;
 }
 
+.title.is-4 {
+  font-size: 0.8rem;  /* 根据需要调整大小 */
+}
+
+
 
 .publication-title {
 }
