--- a/static/css/index.css
+++ b/static/css/index.css
@@ -136,4 +136,9 @@ body {
   font-size: 0.5rem;  /* 根据需要调整大小 */
 }
 
+audio {
+  max-width: 150px;  /* 设置音频控件的最大宽度，可以根据需要调整 */
+  width: 100%;       /* 确保音频控件宽度适应父元素 */
+}
+
 
