--- a/static/css/index.css
+++ b/static/css/index.css
@@ -141,8 +141,8 @@ body {
 }
 
 audio {
-  max-width: 50px;  /* 设置音频控件的最大宽度，可以根据需要调整 */
-  width: 100%;       /* 确保音频控件宽度适应父元素 */
+  width: 50px;  /* 设置宽度 */
+  height: 10px;  /* 设置高度 */
 }
 
 .columns {
